--- a/src/app/features/profile/profile.component.html
+++ b/src/app/features/profile/profile.component.html
@@ -25,7 +25,7 @@
                     <span>Upload</span>
                   </label>
                   <div class="text-align-center">
-                     <small  class="error-msg">{{imageFileSizeError}}</small>
+                    <small class="error-msg">{{ imageFileSizeError }}</small>
                   </div>
                 </div>
               </div>
@@ -62,6 +62,55 @@
                     Email address is required
                   </mat-error>
                 </mat-error>
+                <div class="row">
+                  <div class="col-xs-5">
+                    <mat-form-field class="width100Percent border-select mat-form-field-flex-mm-padding">
+                      <mat-label>*Country Code</mat-label>
+                      <mat-select [disabled]="true" formControlName="countryCode">
+                        <div class="display-flex">
+                          <input
+                            class="p-l-10 p-b-5"
+                            matInput
+                            type="search"
+                            placeholder="Search Country"
+                            [(ngModel)]="searchCountry"
+                            [ngModelOptions]="{standalone: true}"
+                            (keydown)="$event.stopPropagation()"
+                          />
+                          <button mat-button matSuffix mat-icon-button>
+                            <mat-icon>search</mat-icon>
+                          </button>
+                        </div>
+                        <mat-select-trigger>
+                          <span
+                            ><img class="width35Percent p-r-10" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
+                            <span class="p-r-5">{{ selectedCountry && selectedCountry.countryCode }}</span>
+                            <span>{{ selectedCountry && selectedCountry.callingCode }}</span>
+                          </span>
+                        </mat-select-trigger>
+                        <mat-option *ngFor="let country of countryList | SearchPipe: searchCountry:'name'" [value]="country"
+                          ><span
+                            ><img class="width17Percent p-r-10" [src]="country.imageUrl" alt="" />
+                            <span matTooltip="{{ country.name }}" class="limited-character universal">{{ country.name }}</span>
+                          </span>
+                        </mat-option>
+                      </mat-select>
+                    </mat-form-field>
+                  </div>
+                  <div class="col-xs-7">
+                    <mat-form-field class="border-input w-100">
+                      <input matInput type="text" placeholder="Phone No." formControlName="contactNo" />
+                    </mat-form-field>
+                    <mat-error *ngIf="userInfoForm.controls['contactNo'].errors && (userInfoForm.controls['contactNo'].dirty || userInfoForm.controls['contactNo'].touched)">
+                      <mat-error *ngIf="userInfoForm.controls['contactNo'].hasError('required')">
+                        Phone number is required
+                      </mat-error>
+                      <mat-error *ngIf="userInfoForm.controls['contactNo'].hasError('pattern') && userInfoForm.controls['contactNo'].touched">
+                        Phone number must be valid
+                      </mat-error>
+                    </mat-error>
+                  </div>
+                </div>
 
                 <mat-form-field class="border-input w-100">
                   <input matInput type="text" placeholder="Phone No." formControlName="contactNo" />
@@ -72,7 +121,7 @@
                   </mat-error>
                 </mat-error>
 
-                <mat-form-field class="border-select w-100"  *ngIf="users.roleName != 'l3'">
+                <mat-form-field class="border-select w-100" *ngIf="users.roleName != 'l3'">
                   <mat-label>Role</mat-label>
                   <mat-select formControlName="roleId">
                     <mat-option *ngFor="let role of roles" [value]="role.roleId">
@@ -83,12 +132,11 @@
                 <mat-error *ngIf="userInfoForm.controls['roleId'].errors && (userInfoForm.controls['roleId'].dirty || userInfoForm.controls['roleId'].touched)">
                   <mat-error *ngIf="userInfoForm.controls['roleId'].hasError('required')"> Role is required</mat-error>
                 </mat-error>
-                  <mat-form-field class="border-select w-100" *ngIf="users.roleName === 'l3'">
+                <mat-form-field class="border-select w-100" *ngIf="users.roleName === 'l3'">
                   <input matInput type="text" placeholder="Role" formControlName="roleDescription" />
                 </mat-form-field>
 
-
-                  <mat-form-field class="border-select w-100" *ngIf="users.roleName === 'l1'">
+                <mat-form-field class="border-select w-100" *ngIf="users.roleName === 'l1'">
                   <mat-label>Select Annual Turn Over</mat-label>
                   <mat-select formControlName="turnOverId">
                     <mat-option *ngFor="let turnOver of turnOverList" [value]="turnOver.turnOverId">
@@ -96,17 +144,50 @@
                     </mat-option>
                   </mat-select>
                 </mat-form-field>
-                 <mat-error *ngIf="userInfoForm.controls['turnOverId'].errors && (userInfoForm.controls['turnOverId'].dirty || userInfoForm.controls['turnOverId'].touched)">
-                  <mat-error *ngIf="userInfoForm.controls['turnOverId'].hasError('required')">Annual Turn 
-                  over is required</mat-error>
+                <mat-error *ngIf="userInfoForm.controls['turnOverId'].errors && (userInfoForm.controls['turnOverId'].dirty || userInfoForm.controls['turnOverId'].touched)">
+                  <mat-error *ngIf="userInfoForm.controls['turnOverId'].hasError('required')">Annual Turn over is required</mat-error>
                 </mat-error>
-
+                <div class="row height12Percent m-t-10 border-round w-70 p-t-5 full-border-main">
+                  <div class="col-xs-6 p-t-10 color-grey text-semi-bold p-r-0 font-size">Base Currency</div>
+                  <div class="col-xs-6 p-l-0">
+                    <mat-form-field class="w-90 border-select mat-form-field-infix-padding dropdown-padding mat-form-field-flex-mm-padding">
+                      <mat-select [disabled]="true" formControlName="baseCurrency">
+                        <div class="display-flex">
+                          <input
+                            class="p-l-10 p-b-5"
+                            matInput
+                            type="search"
+                            placeholder="Search Country"
+                            [(ngModel)]="searchCountry"
+                            [ngModelOptions]="{standalone: true}"
+                            (keydown)="$event.stopPropagation()"
+                          />
+                          <button mat-button matSuffix mat-icon-button>
+                            <mat-icon>search</mat-icon>
+                          </button>
+                        </div>
+                        <mat-select-trigger>
+                          <span
+                            ><img class="width55Percent p-r-10" [src]="selectedBaseCurrency && selectedBaseCurrency.imageUrl" alt="" />
+                            <span class="p-r-5">{{ selectedBaseCurrency && selectedBaseCurrency.currencyCode }}</span>
+                          </span>
+                        </mat-select-trigger>
+                        <mat-option *ngFor="let currency of currencyList | SearchPipe: searchCountry:'currency'" [value]="currency"
+                          ><span
+                            ><img class="w-17 p-r-10" [src]="currency.imageUrl" alt="" />
+                            <span class="p-r-5">{{ currency.currency }}</span>
+                          </span>
+                        </mat-option>
+                      </mat-select>
+                    </mat-form-field>
+                  </div>
+                </div>
               </div>
 
               <div class="col-sm-12 col-md-12 choose-trades" *ngIf="users.roleName === 'l1'">
                 <p style="font-weight: 600;">Selected Trades</p>
                 <mat-chip-list multiple id="chipList" [selectable]="true">
-                      <mat-chip
+                  <mat-chip
                     *ngFor="let trade of tradeList"
                     [selected]="trade.tradeId"
                     [ngClass]="[trade.selected && trade.tradeId !== OthersId ? 'active' : '', trade.tradeId === OthersId ? 'user-Other-Trade' : '']"
@@ -114,15 +195,13 @@
                   >
                     {{ trade.tradeName }}
                   </mat-chip>
-                 
-                    <mat-form-field *ngIf="tradeDescription" class="border-input p-l-10 font-size14">
-                      <input matInput type="text" [value]="tradeDescription" placeholder="Other trade"  disabled/>
-                    </mat-form-field>
-                 
+
+                  <mat-form-field *ngIf="tradeDescription" class="border-input p-l-10 font-size14">
+                    <input matInput type="text" [value]="tradeDescription" placeholder="Other trade" disabled />
+                  </mat-form-field>
                 </mat-chip-list>
               </div>
 
-          
               <div class="text-center col-md-12 mt-4">
                 <button class="btn btn-warning next-btn" [disabled]="!imageFileSize">Save</button>
               </div>
