--- a/src/assets/scss/base/spacing.scss
+++ b/src/assets/scss/base/spacing.scss
@@ -1,5 +1,113 @@
-$spaceamounts: (0, 5, 10, 15, 20, 25, 30, 35, 40, 50, 65, 70, 80, 90, 100, 110, 150, 180, 300, 350); // Adjust this to include the pixel amounts you need.
+$spaceamounts: (
+  0,
+  1,
+  2,
+  3,
+  4,
+  5,
+  6,
+  7,
+  8,
+  9,
+  10,
+  11,
+  12,
+  13,
+  14,
+  15,
+  16,
+  17,
+  18,
+  19,
+  20,
+  21,
+  22,
+  23,
+  24,
+  25,
+  26,
+  27,
+  28,
+  29,
+  30,
+  31,
+  32,
+  33,
+  34,
+  35,
+  36,
+  37,
+  38,
+  39,
+  40,
+  41,
+  42,
+  43,
+  44,
+  45,
+  46,
+  47,
+  48,
+  49,
+  50,
+  51,
+  52,
+  53,
+  54,
+  55,
+  56,
+  57,
+  58,
+  59,
+  60,
+  61,
+  62,
+  63,
+  64,
+  65,
+  66,
+  67,
+  68,
+  69,
+  70,
+  71,
+  72,
+  73,
+  74,
+  75,
+  76,
+  77,
+  78,
+  79,
+  80,
+  81,
+  82,
+  83,
+  84,
+  85,
+  86,
+  87,
+  88,
+  89,
+  90,
+  91,
+  92,
+  93,
+  94,
+  95,
+  96,
+  97,
+  98,
+  99,
+  100,
+  110,
+  150,
+  180,
+  300,
+  350
+); // Adjust this to include the pixel amounts you need.
 $sides: (top, bottom, left, right); // Leave this variable alone
+$spaceremamounts: (0.06rem, 0.13rem, 0.19rem, 0.3rem, 0.4rem, 0.5rem, 0.6rem, 0.8rem, 0.9rem, 1rem, 1.1rem, 1.3rem, 1.5rem, 1.6rem, 1.8rem, 2rem, 3rem, 4rem, 5rem, 6rem);
 
 @each $space in $spaceamounts {
   .m-#{$space} {
@@ -10,6 +118,18 @@ $sides: (top, bottom, left, right); // Leave this variable alone
   }
   .radius-#{$space} {
     border-radius: #{$space}px !important;
+  }
+  .w-#{$space} {
+    width: #{$space}% !important;
+  }
+  .h-#{$space} {
+    height: #{$space}% !important;
+  }
+  .w-vw-#{$space} {
+    width: #{$space}vw !important;
+  }
+  .h-vh-#{$space} {
+    height: #{$space}vh !important;
   }
   @each $side in $sides {
     .m-#{str-slice($side, 0, 1)}-#{$space} {
