--- a/src/app/features/auth/sign-in/sign-in.component.html
+++ b/src/app/features/auth/sign-in/sign-in.component.html
@@ -20,7 +20,7 @@
             </div>
             <mat-select-trigger>
               <span matTooltip="{{ selectedCountry && selectedCountry.countryCode }} {{ selectedCountry && selectedCountry.callingCode }}"
-                ><img class="width35Percent" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
+                ><img class="width35Percent p-r-4" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
                 <span class="p-r-5 font-size12">{{ selectedCountry && selectedCountry.countryCode }}</span>
                 <span class="font-size12 text-semi-bold">{{ selectedCountry && selectedCountry.callingCode }}</span>
               </span>
@@ -34,7 +34,7 @@
           </mat-select>
         </mat-form-field>
       </div>
-      <div class="col-xs-7">
+      <div class="col-xs-7 p-t-1">
         <mat-form-field class="border-input">
           <input matInput formControlName="phone" type="number" min="0" onkeypress="return event.charCode >= 48 && event.charCode <= 57" placeholder="Phone No." />
           <small *ngIf="signinForm.controls['phone'].hasError('required') && signinForm.controls['phone'].touched" class="signinForm-error-msg"> Phone No is required </small>
