--- a/src/app/features/auth/forgot-password/forgot-password.component.html
+++ b/src/app/features/auth/forgot-password/forgot-password.component.html
@@ -60,7 +60,8 @@
                     <mat-option *ngFor="let country of countryList | SearchPipe: searchCountry:'name'" [value]="country" selected="trade.isAttatched"
                       ><span
                         ><img class="width17Percent p-r-10" [src]="country.imageUrl" alt="" />
-                        <span matTooltip="{{ country.name }}" class="limited-character universal">{{ country.name }}</span>
+                        <span matTooltip="{{ country.name }}" class="limited-character universal p-r-5">{{ country.name }}</span>
+                        <span class="text-semi-bold color-grey">{{ country.callingCode }}</span>
                       </span>
                     </mat-option>
                   </mat-select>
