--- a/src/app/features/auth/signup/signup.component.html
+++ b/src/app/features/auth/signup/signup.component.html
@@ -34,7 +34,8 @@
             <mat-option *ngFor="let country of countryList | SearchPipe: searchCountry:'name'" [value]="country"
               ><span
                 ><img class="width17Percent p-r-10" [src]="country.imageUrl" alt="" />
-                <span class="limited-character universal" matTooltip="{{ country.name }}">{{ country.name }}</span>
+                <span class="limited-character universal p-r-5" matTooltip="{{ country.name }}">{{ country.name }}</span>
+                <span class="text-semi-bold color-grey">{{ country.callingCode }}</span>
               </span>
             </mat-option>
           </mat-select>
