--- a/src/app/features/rfq/create-rfq/rfq-project-materials/rfq-project-materials.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-project-materials/rfq-project-materials.component.html
@@ -45,23 +45,20 @@
       </span>
     </div>
   </div>
-    <div class="row select-currency p-t-10 p-b-10" *ngIf="(addRfq.rfqCurrency != null && addRfq.rfqCurrency.exchangeCurrencyName != null)">
-      <div class="col-sm-10 col-md-9"></div>
-      <div class="col-xs-12 col-sm-3 col-md-3">
-        <div class="base-currency">
-           <span class="text-semi-bold font-size-vary-grn color-6d6a6a">
-             <img width="25px" *ngIf="addRfq.rfqCurrency.exchangeCurrencyFlag" [src]="addRfq.rfqCurrency.exchangeCurrencyFlag">
-             {{addRfq.rfqCurrency.exchangeCurrencyName}} 
-           </span> 
-           <span class="p-l-5"> = </span>
-           <span class="p-l-5"> {{addRfq.rfqCurrency.exchangeValue}} </span>
-           <span class="p-l-5">
-            <img width="25px" *ngIf="addRfq.rfqCurrency.primaryCurrencyFlag" [src]="addRfq.rfqCurrency.primaryCurrencyFlag">
-              {{addRfq.rfqCurrency.primaryCurrencyName}}
-           </span>
-        </div>
-      </div>
-    </div>
+  <div class="col-xs-12 p-t-10 p-b-20 text-right" *ngIf="addRfq.rfqCurrency != null && addRfq.rfqCurrency.exchangeCurrencyName != null">
+    <span class="base-currency p-l-5 p-r-5 p-t-10 p-b-10">
+      <span class="font-size-vary-grn color-grey">
+        <img width="25px" *ngIf="addRfq.rfqCurrency.exchangeCurrencyFlag" [src]="addRfq.rfqCurrency.exchangeCurrencyFlag" />
+        {{ addRfq.rfqCurrency.exchangeCurrencyName }}
+      </span>
+      <span class="p-l-5"> = </span>
+      <span class="p-l-5 color-6d6a6a color-grey"> {{ addRfq.rfqCurrency.exchangeValue }} </span>
+      <span class="p-l-5 color-grey">
+        <img width="25px" *ngIf="addRfq.rfqCurrency.primaryCurrencyFlag" [src]="addRfq.rfqCurrency.primaryCurrencyFlag" />
+        {{ addRfq.rfqCurrency.primaryCurrencyName }}
+      </span>
+    </span>
+  </div>
 </form>
 <form *ngIf="rfqDetails.length" [formGroup]="materialForm">
   <span formArrayName="forms">
