--- a/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
@@ -1,14 +1,14 @@
 <form *ngIf="projectSelectedMaterials.length" [formGroup]="materialForms">
-  <div class="row ">
+  <div class="row">
     <div class="col-xs-6 p-t-10 border-input">
-      <mat-form-field class=" input-search-padding-zero">
+      <mat-form-field class="input-search-padding-zero">
         <input matInput placeholder="Search Projects" type="search" [(ngModel)]="searchProject" [ngModelOptions]="{standalone: true}" />
         <button mat-button matSuffix mat-icon-button>
           <mat-icon>search</mat-icon>
         </button>
       </mat-form-field>
 
-      <mat-form-field class=" p-l-20 input-search-padding-zero">
+      <mat-form-field class="p-l-20 input-search-padding-zero">
         <input matInput placeholder="Search Material" type="search" [(ngModel)]="searchMaterial" [ngModelOptions]="{standalone: true}" />
         <button mat-button matSuffix mat-icon-button>
           <mat-icon>search</mat-icon>
@@ -28,23 +28,22 @@
       </span>
     </div>
   </div>
-  <div class="row select-currency p-t-10 p-b-10" *ngIf="rfqData.rfqCurrency!=null && rfqData.rfqCurrency.exchangeCurrencyName != null">
-    <div class="col-sm-10 col-md-9"></div>
-    <div class="col-xs-12 col-sm-3 col-md-3">
-      <div class="base-currency">
-         <span class="text-semi-bold font-size-vary-grn color-6d6a6a">
-           <img width="25px" [src]="rfqData.rfqCurrency.exchangeCurrencyFlag">
-           {{rfqData.rfqCurrency.exchangeCurrencyName}} 
-         </span> 
-         <span class="p-l-5"> = </span>
-         <span class="p-l-5"> {{rfqData.rfqCurrency.exchangeValue}} </span>
-         <span class="p-l-5">
-          <img width="25px" [src]="rfqData.rfqCurrency.primaryCurrencyFlag">
-            {{rfqData.rfqCurrency.primaryCurrencyName}}
-         </span>
-      </div>
-    </div>
+
+  <div class="col-xs-12 p-t-10 p-b-20 text-right" *ngIf="rfqData.rfqCurrency != null && rfqData.rfqCurrency.exchangeCurrencyName != null">
+    <span class="base-currency p-l-5 p-r-5 p-t-10 p-b-10">
+      <span class="font-size-vary-grn color-grey">
+        <img width="25px" *ngIf="rfqData.rfqCurrency.exchangeCurrencyFlag" [src]="rfqData.rfqCurrency.exchangeCurrencyFlag" />
+        {{ rfqData.rfqCurrency.exchangeCurrencyName }}
+      </span>
+      <span class="p-l-5"> = </span>
+      <span class="p-l-5 color-6d6a6a color-grey"> {{ rfqData.rfqCurrency.exchangeValue }} </span>
+      <span class="p-l-5 color-grey">
+        <img width="25px" *ngIf="rfqData.rfqCurrency.primaryCurrencyFlag" [src]="rfqData.rfqCurrency.primaryCurrencyFlag" />
+        {{ rfqData.rfqCurrency.primaryCurrencyName }}
+      </span>
+    </span>
   </div>
+
   <div *ngFor="let material of projectSelectedMaterials | SearchPipe: searchProject:'projectName'; let mati = index">
     <ng-container *ngIf="material.projectMaterialList.length">
       <mat-accordion class="accordion-padding-zero" formArrayName="forms">
@@ -84,10 +83,7 @@
             <ng-container matColumnDef="Fullfillment Date" class="date-dialog-add-edit">
               <th mat-header-cell *matHeaderCellDef>Fullfillment Date</th>
               <td mat-cell *matCellDef="let element; let i = index">
-                <mat-form-field
-                  class="border-input "
-                  [formGroupName]="i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)"
-                >
+                <mat-form-field class="border-input" [formGroupName]="i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)">
                   <!-- <mat-label>Fullfil </mat-label> -->
                   <!-- <span class="form-placeholder">{{
                     materialForms["controls"]["forms"]["controls"][i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)]["controls"]["fullfilmentDate"].value
@@ -103,15 +99,17 @@
               <th mat-header-cell *matHeaderCellDef>Estimated Rate</th>
               <td mat-cell *matCellDef="let element; let i = index">
                 <mat-form-field [formGroupName]="i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)" class="border-input table-input">
-                  <input
-                    matInput
-                    formControlName="estimatedRate"
-                    type="text"
-                    appTwoDigitDecimaNumber
-                    placeholder="Estimated Rate"
-                    min="0"
-                  />
-                  <small *ngIf=" materialForms['controls']['forms']['controls'][i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)]['controls']['estimatedRate'].hasError('pattern') && materialForms['controls']['forms']['controls'][i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)]['controls']['estimatedRate'].touched" class="error-msg"> Invalid estimated rate </small>
+                  <input matInput formControlName="estimatedRate" type="text" appTwoDigitDecimaNumber placeholder="Estimated Rate" min="0" />
+                  <small
+                    *ngIf="
+                      materialForms['controls']['forms']['controls'][i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)]['controls']['estimatedRate'].hasError(
+                        'pattern'
+                      ) && materialForms['controls']['forms']['controls'][i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)]['controls']['estimatedRate'].touched
+                    "
+                    class="error-msg"
+                  >
+                    Invalid estimated rate
+                  </small>
                 </mat-form-field>
               </td>
             </ng-container>
