--- a/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
@@ -30,23 +30,22 @@
     </span>
   </div>
 </div>
-<div class="row select-currency p-t-10 p-b-10" *ngIf="rfqData.rfqCurrency != null && rfqData.rfqCurrency.exchangeCurrencyName != null">
-  <div class="col-sm-10 col-md-9"></div>
-  <div class="col-xs-12 col-sm-3 col-md-3">
-    <div class="base-currency">
-       <span class="text-semi-bold font-size-vary-grn color-6d6a6a">
-         <img width="25px" [src]="rfqData.rfqCurrency.exchangeCurrencyFlag">
-         {{rfqData.rfqCurrency.exchangeCurrencyName}} 
-       </span> 
-       <span class="p-l-5"> = </span>
-       <span class="p-l-5"> {{rfqData.rfqCurrency.exchangeValue}} </span>
-       <span class="p-l-5">
-        <img width="25px" [src]="rfqData.rfqCurrency.primaryCurrencyFlag">
-          {{rfqData.rfqCurrency.primaryCurrencyName}}
-       </span>
-    </div>
-  </div>
+
+<div class="col-xs-12 p-t-10 p-b-20 text-right" *ngIf="rfqData.rfqCurrency != null && rfqData.rfqCurrency.exchangeCurrencyName != null">
+  <span class="base-currency p-l-5 p-r-5 p-t-10 p-b-10">
+    <span class="font-size-vary-grn color-grey">
+      <img width="25px" *ngIf="rfqData.rfqCurrency.exchangeCurrencyFlag" [src]="rfqData.rfqCurrency.exchangeCurrencyFlag" />
+      {{ rfqData.rfqCurrency.exchangeCurrencyName }}
+    </span>
+    <span class="p-l-5"> = </span>
+    <span class="p-l-5 color-6d6a6a color-grey"> {{ rfqData.rfqCurrency.exchangeValue }} </span>
+    <span class="p-l-5 color-grey">
+      <img width="25px" *ngIf="rfqData.rfqCurrency.primaryCurrencyFlag" [src]="rfqData.rfqCurrency.primaryCurrencyFlag" />
+      {{ rfqData.rfqCurrency.primaryCurrencyName }}
+    </span>
+  </span>
 </div>
+
 <form *ngIf="allSuppliers.length" [formGroup]="supplierForm">
   <table mat-table [dataSource]="allSuppliers | SearchPipe: searchText:'supplier_name'" formArrayName="forms" class="mat-elevation-z4 col-sm-12 mt-3">
     <ng-container matColumnDef="Supplier Name">
