--- a/src/assets/scss/pages/selectCurrency.scss
+++ b/src/assets/scss/pages/selectCurrency.scss
@@ -1,32 +1,32 @@
-.select-currency{
-  .base-currency{
-    border : 1px solid #d0d0d0;
+.select-currency {
+  .base-currency {
+    border: 1px solid #d0d0d0;
     border-radius: 5px;
     padding: 3px;
     text-align: center;
     background: #ffffff;
   }
-  .country-currency{
-    .mat-form-field-infix{
-     // padding: 8px 0px 0px 0px !important;
-     padding: 8px 0px !important;
+  .country-currency {
+    .mat-form-field-infix {
+      // padding: 8px 0px 0px 0px !important;
+      padding: 8px 0px !important;
     }
-    .mat-select-arrow{
+    .mat-select-arrow {
       margin-top: 12px !important;
     }
   }
-  .conversion-rate{
+  .conversion-rate {
     padding-top: 5px;
   }
- 
-  .border-select{
-    .mat-form-field-wrapper{
-      .mat-form-field-flex{
+
+  .border-select {
+    .mat-form-field-wrapper {
+      .mat-form-field-flex {
         padding-bottom: 0px !important;
-       // padding-left: 0px !important;
-        .mat-form-field-infix{
-          .mat-form-field-label-wrapper{
-            .mat-form-field-label{
+        // padding-left: 0px !important;
+        .mat-form-field-infix {
+          .mat-form-field-label-wrapper {
+            .mat-form-field-label {
               padding-left: 0px !important;
             }
           }
@@ -34,4 +34,12 @@
       }
     }
   }
+}
+
+.base-currency {
+  border: 1px solid #d0d0d0;
+  border-radius: 5px;
+  padding: 3px;
+  text-align: center;
+  background: #ffffff;
 }
