sign in and sign up

--- a/src/app/features/first-login/update-info/update-info.component.html
+++ b/src/app/features/first-login/update-info/update-info.component.html
@@ -97,7 +97,7 @@
                       </mat-select>
                     </mat-form-field>
                   </div>
-                  <div class="col-xs-7">
+                  <div class="col-xs-7 p-t-3">
                     <mat-form-field class="border-input w-100">
                       <input matInput type="text" placeholder="Phone No." formControlName="contactNo" />
                     </mat-form-field>
