--- a/src/app/features/rfq/review/review.component.html
+++ b/src/app/features/rfq/review/review.component.html
@@ -29,7 +29,7 @@
                 <mat-datepicker #dueDate startView="month" [startAt]="dueDate"></mat-datepicker>
               </mat-form-field>
             </div> -->
-            <div class="col-xs-6 date-dialog-add-edit">
+            <div class="col-xs-6 date-dialog-add-edit p-t-6">
               <!-- end date -->
               <mat-form-field class="border-input">
                 <mat-label>RFQ End Date*</mat-label>
@@ -50,7 +50,7 @@
                   View Terms & Conditions/Documents
                 </button>
               </div> -->
-            <div class="col-xs-3 p-t-10 p-b-20" *ngIf="finalRfq.rfqCurrency != null && finalRfq.rfqCurrency.exchangeCurrencyName != null">
+            <div class="col-xs-3 p-t-20 p-b-20 text-right" *ngIf="finalRfq.rfqCurrency != null && finalRfq.rfqCurrency.exchangeCurrencyName != null">
               <span class="base-currency p-l-5 p-r-5 p-t-10 p-b-10">
                 <span class="font-size-vary-grn color-grey">
                   <img width="25px" *ngIf="finalRfq.rfqCurrency.exchangeCurrencyFlag" [src]="finalRfq.rfqCurrency.exchangeCurrencyFlag" />
