--- a/src/app/features/rfq/rfq-bids/rfq-bids.component.html
+++ b/src/app/features/rfq/rfq-bids/rfq-bids.component.html
@@ -3,16 +3,35 @@
     <form *ngIf="rfqProjects.length" (ngSubmit)="allocateQuantity()" [formGroup]="rfqForms">
       <div class="row p-t-10 p-b-10">
         <div class="col-sm-12">
-         
           <span>
-            <button mat-raised-button class="main-background-color main-button color-white pull-right" [disabled]="( getFormValidation() ? (getFormQtyValidation() ? true : false) :  true )">
+            <button
+              mat-raised-button
+              class="main-background-color main-button color-white pull-right"
+              [disabled]="getFormValidation() ? (getFormQtyValidation() ? true : false) : true"
+            >
               Create P.O
             </button>
           </span>
-           <div class="pull-right color-main p-r-20 p-t-10 text-semi-bold cursor-pointer" (click)="viewRemarks()">
-              View Remarks
+          <div class="pull-right color-main p-r-20 p-t-10 text-semi-bold cursor-pointer" (click)="viewRemarks()">
+            View Remarks
           </div>
         </div>
+      </div>
+
+      <div class="col-xs-12 p-t-10 p-b-20 text-right" *ngIf="rfqProjects[0].rfqCurrency != null && rfqProjects[0].rfqCurrency.exchangeCurrencyName != null">
+        <span class="slideToggalColor p-r-10"><mat-slide-toggle [(ngModel)]="ratesBaseCurr" [ngModelOptions]="{standalone: true}"></mat-slide-toggle></span>
+        <span class="base-currency p-l-5 p-r-5 p-t-10 p-b-10">
+          <span class="font-size-vary-grn color-grey">
+            <img width="25px" *ngIf="rfqProjects[0].rfqCurrency.exchangeCurrencyFlag" [src]="rfqProjects[0].rfqCurrency.exchangeCurrencyFlag" />
+            {{ rfqProjects[0].rfqCurrency.exchangeCurrencyName }}
+          </span>
+          <span class="p-l-5"> = </span>
+          <span class="p-l-5 color-6d6a6a color-grey"> {{ rfqProjects[0].rfqCurrency.exchangeValue }} </span>
+          <span class="p-l-5 color-grey">
+            <img width="25px" *ngIf="rfqProjects[0].rfqCurrency.primaryCurrencyFlag" [src]="rfqProjects[0].rfqCurrency.primaryCurrencyFlag" />
+            {{ rfqProjects[0].rfqCurrency.primaryCurrencyName }}
+          </span>
+        </span>
       </div>
       <div formArrayName="forms">
         <div class="customBid">
@@ -68,8 +87,9 @@
                   <div class="p-0" *ngFor="let material of project.materialList; let m = index" [formGroupName]="m">
                     <section class="mat-row rfqbid-header-color">
                       <span class="col-sm-2">
-                        <div class="limited-character" matTooltip=" {{ material.materialName }}">{{ material.materialName }} <br />
-                        <!-- <span *ngIf="!rfqForms.controls.forms['controls'][p].controls.materialList.controls[m].controls.validQtyBoolean.value" class="error-msg font-size9"> Net Quantity Should be less than {{material.poAvailableQty}} </span> -->
+                        <div class="limited-character" matTooltip=" {{ material.materialName }}">
+                          {{ material.materialName }} <br />
+                          <!-- <span *ngIf="!rfqForms.controls.forms['controls'][p].controls.materialList.controls[m].controls.validQtyBoolean.value" class="error-msg font-size9"> Net Quantity Should be less than {{material.poAvailableQty}} </span> -->
                         </div>
                       </span>
                       <span class="col-sm-1">
@@ -95,8 +115,7 @@
 
                     <ng-container formArrayName="supplierList">
                       <div class="mat-row supplierLevel" *ngFor="let supplier of material.supplierList; let s = index" [formGroupName]="s">
-                        <span class="col-sm-2">{{ supplier.supplierName }} 
-                        </span>
+                        <span class="col-sm-2">{{ supplier.supplierName }} </span>
                         <span class="col-sm-1"></span>
 
                         <div class="col-sm-9">
@@ -107,14 +126,14 @@
                                   <ng-container *ngIf="brandInfo.materialUnitPrice !== null && brandInfo.materialUnitPrice !== 0; else dashedLine">
                                     <mat-form-field class="border-input">
                                       <input
-                                      type="text"
+                                        type="text"
                                         class="quantity"
                                         appTwoDigitDecimaNumber
                                         matInput
                                         formControlName="quantity"
                                         placeholder="qty"
                                         min="0"
-                                        (input)="getQuanityValidation(p,m)"
+                                        (input)="getQuanityValidation(p, m)"
                                       />
                                     </mat-form-field>
                                   </ng-container>
@@ -125,7 +144,13 @@
                                 </span>
 
                                 <span class="col-sm-1 text-right margin-right">
-                                  {{ brandInfo.materialUnitPrice != null ? brandInfo.materialUnitPrice : "--" }}
+                                  {{
+                                    brandInfo.materialUnitPrice != null
+                                      ? ratesBaseCurr
+                                        ? brandInfo.materialUnitPrice * project.rfqCurrency.exchangeValue
+                                        : brandInfo.materialUnitPrice
+                                      : "--"
+                                  }}
                                 </span>
 
                                 <!-- <span class="col-sm-1"></span> -->
