--- a/src/assets/scss/base/spacing.scss
+++ b/src/assets/scss/base/spacing.scss
@@ -122,6 +122,9 @@ $spaceremamounts: (0.06rem, 0.13rem, 0.19rem, 0.3rem, 0.4rem, 0.5rem, 0.6rem, 0.
   .width-#{$space} {
     width: #{$space}% !important;
   }
+  .width-#{$space}-px {
+    width: #{$space}px !important;
+  }
   .height-#{$space} {
     height: #{$space}% !important;
   }
