rfq bid international currency

--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -382,7 +382,7 @@ a:hover {
   color: #6d6a6a !important;
 }
 .text-decoration-underline {
-  text-decoration: underline;
+  text-decoration: underline !important;
 }
 .padd-box-none {
   padding: 0 !important;
