--- a/src/app/shared/dialogs/add-address-po/add-addressPo.html
+++ b/src/app/shared/dialogs/add-address-po/add-addressPo.html
@@ -36,7 +36,8 @@
             </div>
           </div>
           <div class="pull-right p-t-5">
-            <button mat-raised-button class="main-background-color main-button color-white m-b-5" cdkFocusInitial (click)="onselectAddress()">
+            <button mat-raised-button class="main-background-color main-button color-white m-b-5" cdkFocusInitial
+              (click)="onselectAddress()">
               Save
             </button>
           </div>
@@ -57,10 +58,14 @@
                 <mat-form-field class="col-xs-12 ">
                   <input matInput type="text" placeholder="Address Line 1" formControlName="addressLine1" />
                 </mat-form-field>
-                <small *ngIf="newAddressForm.controls['addressLine1'].hasError('required') && newAddressForm.controls['addressLine1'].touched" class="form-error-msg p-l-15">
+                <small
+                  *ngIf="newAddressForm.controls['addressLine1'].hasError('required') && newAddressForm.controls['addressLine1'].touched"
+                  class="form-error-msg p-l-15">
                   Address Line1 is required
                 </small>
-                <small *ngIf="newAddressForm.controls['addressLine1'].value.length > 120 && newAddressForm.controls['addressLine1'].touched" class="form-error-msg p-l-15">
+                <small
+                  *ngIf="newAddressForm.controls['addressLine1'].value.length > 120 && newAddressForm.controls['addressLine1'].touched"
+                  class="form-error-msg p-l-15">
                   Address should be less than 120 characters
                 </small>
               </div>
@@ -69,9 +74,11 @@
               <div class="row border-input p-t-0">
                 <mat-form-field class="col-xs-12">
                   <input matInput type="text" placeholder="Address Line 2" formControlName="addressLine2" />
-                   <small *ngIf="newAddressForm.controls['addressLine2'].value.length > 120 && newAddressForm.controls['addressLine2'].touched" class="form-error-msg p-l-15">
-                  Address should be less than 120 characters
-                </small>
+                  <small
+                    *ngIf="newAddressForm.controls['addressLine2'].value.length > 120 && newAddressForm.controls['addressLine2'].touched"
+                    class="form-error-msg p-l-15">
+                    Address should be less than 120 characters
+                  </small>
                 </mat-form-field>
               </div>
             </div>
@@ -80,14 +87,18 @@
             <div class="col-xs-6">
               <div class="row border-input p-t-0">
                 <mat-form-field class="col-xs-12 ">
-                  <input matInput type="string" (input)="getPincode($event)" placeholder="Pincode" formControlName="pinCode" />
+                  <input matInput type="string" (input)="getPincode($event)" placeholder="Pincode"
+                    formControlName="pinCode" />
                 </mat-form-field>
-                <small *ngIf="newAddressForm.controls['pinCode'].hasError('required') && newAddressForm.controls['pinCode'].touched" class="form-error-msg p-l-15">
+                <small
+                  *ngIf="newAddressForm.controls['pinCode'].hasError('required') && newAddressForm.controls['pinCode'].touched"
+                  class="form-error-msg p-l-15">
                   Pincode is required
                 </small>
                 <!-- <small *ngIf="newAddressForm.controls['pinCode'].hasError('pattern') && newAddressForm.controls['pinCode'].touched"
                                     class="form-error-msg p-l-15"> Enter Valid Pincode</small> -->
-                <small *ngIf="newAddressForm.controls['pinCode'].touched && (!validPincode) && (pincodeLength>0)" class="error-msg p-l-15">
+                <small *ngIf="newAddressForm.controls['pinCode'].touched && (!validPincode) && (pincodeLength>0)"
+                  class="error-msg p-l-15">
                   Enter Valid Pincode
                 </small>
               </div>
@@ -114,24 +125,22 @@
                 <mat-form-field class="col-xs-12">
                   <input matInput type="text" placeholder="GSTIN" formControlName="gstNo" />
                 </mat-form-field>
-                <small *ngIf="newAddressForm.controls['gstNo'].hasError('required') && newAddressForm.controls['gstNo'].touched" class="form-error-msg p-l-15">
+                <small
+                  *ngIf="newAddressForm.controls['gstNo'].hasError('required') && newAddressForm.controls['gstNo'].touched"
+                  class="form-error-msg p-l-15">
                   GSTIN is required
                 </small>
-                <small *ngIf="newAddressForm.controls['gstNo'].hasError('pattern') && newAddressForm.controls['gstNo'].touched" class="form-error-msg p-l-15">
-                  Enter Valid GSTIN</small
-                >
+                <small
+                  *ngIf="newAddressForm.controls['gstNo'].hasError('pattern') && newAddressForm.controls['gstNo'].touched"
+                  class="form-error-msg p-l-15">
+                  Enter Valid GSTIN</small>
               </div>
             </div>
           </div>
         </div>
         <div class="pull-right">
-          <button
-            mat-raised-button
-            [disabled]="!newAddressForm.valid || (!validPincode)"
-            class="main-background-color main-button color-white m-b-5"
-            cdkFocusInitial
-            (click)="onAddAddress()"
-          >
+          <button mat-raised-button [disabled]="!newAddressForm.valid || (!validPincode)"
+            class="main-background-color main-button color-white m-b-5" cdkFocusInitial (click)="onAddAddress()">
             Add
           </button>
         </div>
